@@ -1,3 +1,8 @@
+2006-10-27  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* src/skunk/util/timeconvert.py (convert): convert now processes
+	lists and tuples correctly recursively.
+
 2005-10-25  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* src/skunk/cache/base.py (Cache.call): changing signature of
